fix(card): normalize font-weight of card--row heading

--- a/packages/core/src/components/card/_card.scss
+++ b/packages/core/src/components/card/_card.scss
@@ -99,6 +99,7 @@
 
         .#{$ray-class-prefix}card__heading {
           @include ray-h2;
+          font-weight: 400;
         }
 
         .#{$ray-class-prefix}card__image {
