fix(accessibility): only show active states when keyboard navigating

--- a/packages/core/src/components/button/_button.scss
+++ b/packages/core/src/components/button/_button.scss
@@ -72,7 +72,7 @@
       border-color: $ray-color-blue-60;
     }
 
-    &:focus {
+    .#{$ray-accessibility-class} &:focus {
       box-shadow: $ray-box-shadow-focus-state;
     }
 
@@ -96,7 +96,7 @@
         border-color: $ray-color-red-60;
       }
 
-      &:focus {
+      .#{$ray-accessibility-class} &:focus {
         box-shadow: 0 0 0 3px transparentize($ray-color-red-50, 0.75);
       }
 
@@ -121,7 +121,7 @@
       background-color: $ray-color-blue-10;
     }
 
-    &:focus {
+    .#{$ray-accessibility-class} &:focus {
       box-shadow: $ray-box-shadow-focus-state;
     }
 
@@ -137,7 +137,7 @@
         background-color: $ray-color-red-10;
       }
 
-      &:focus {
+      .#{$ray-accessibility-class} &:focus {
         box-shadow: 0 0 0 3px transparentize($ray-color-red-50, 0.75);
       }
 
@@ -200,7 +200,7 @@
       background-color: $ray-color-gray-03;
     }
 
-    &:focus {
+    .#{$ray-accessibility-class} &:focus {
       box-shadow: $ray-box-shadow-focus-state;
     }
 
@@ -211,7 +211,7 @@
     &.#{$ray-class-prefix}button--danger {
       color: $ray-color-red-50;
 
-      &:focus {
+      .#{$ray-accessibility-class} &:focus {
         box-shadow: 0 0 0 3px transparentize($ray-color-red-50, 0.75);
       }
 
